[package]
name = "futility-rs"
version = "0.1.0"
edition = "2018"

[profile.release]
panic = 'abort'

[dependencies]
thiserror = "1.0"
bitflags= "2.5.0"
clap = { version = "4.5.4", features = ["derive"] }
camino = "1.1.7"
clap_complete = "4.5.2"
env_logger = "0.11.3"
itertools = "0.13.0"
log = "0.4.21"
tempfile = "3.10.1"
